testsuite/tests/deriving/should_fail/T3833.hs
{-# LANGUAGE Haskell2010 #-}

{-# LANGUAGE StandaloneDeriving #-}
-- {-# LANGUAGE GeneralizedNewtypeDeriving #-}

import Data.Monoid

newtype DecodeMap e = DecodeMap [e]

deriving instance Monoid (DecodeMap e)
