testsuite/tests/deriving/should_fail/T3833.stderr

T3833.hs:10:1: error:
    • Can't make a derived instance of ‘Monoid (DecodeMap e)’:
        ‘Monoid’ is not a stock derivable class (Eq, Show, etc.)
    • In the stand-alone deriving instance for ‘Monoid (DecodeMap e)’
    Suggested fix:
      Perhaps you intended to use GeneralizedNewtypeDeriving
      for GHC's newtype-deriving extension
